--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <header class="mb-5">
     <nav class="navbar navbar-expand-lg navbar-dark m-6">
         <div class="container-fluid">
-            <a class="navbar-brand logo" href="./index.html">PEDRAZA TECH SUPPLY</a>
+            <a class="navbar-brand logo" href="index.html">PEDRAZA TECH SUPPLY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,10 +34,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link" href="./pages/login.html" tabindex="-1" aria-disabled="true">Log-in</a>
                     <a class="nav-link" href="#">Productos</a>
-                    <a class="nav-link" href="#">Carrito</a>
-                    <a class="nav-link" href="#">Contacto</a>
-                    <a class="nav-link" href="./pages/registroUsuario.html" tabindex="-1" aria-disabled="true">Registro de usuario</a>
+                    <a class="nav-link" href="#">Ofertas</a>
+                    <a class="nav-link" href="#">Contacto</a> 
                 </div>
             </div>
         </div>
